[fix] Do not hide top margin on small screens
Chorme on Windows sometimes have a smaller screen proportion, depending
of the configuration and the zoom.

This is part of the fixes for https://trello.com/c/9Ih5SiVJ/954.

--- a/static/css/iframe.css
+++ b/static/css/iframe.css
@@ -18,7 +18,7 @@
 /* For LESS THAN 641px wide */
 @media (max-width : 640px) {
   #innerdocbody{
-    padding-top:0px !important;
+    padding-top:77px !important;
     margin-left:0px !important;
   }
   #sidediv{
@@ -67,7 +67,7 @@
 @media (min-width: 542px) and (max-width : 691px) {
   #innerdocbody > div {
     padding-left: 67px; /* left margin gets only enough to display scene number */
-    padding-right: calc(100% - 511px);
+    padding-right: calc(100% - 511px); /* 444 + 67 (padding-left) */
   }
 }
 
